fix(asmdb): fix determined format not showing for non-leaf decodetree nodes

--- a/src/components/AsmDB/index.module.css
+++ b/src/components/AsmDB/index.module.css
@@ -2,7 +2,8 @@
   border: 1px solid var(--ifm-color-secondary-contrast-background);
 }
 
-.attrib::before {
+.attrib::before,
+.contentAttrib::before {
   content: ' ';
 }
 
